feat: add Phase 2 batch pipeline (message assembly, reader/processor/writer, job trigger)
Adds the chunk-oriented Spring Batch pipeline that turns a page of ReportConfigRows into
outbound messages: ReportPipelineItemReader (paging, tree fan-out, drain-order checkpointing),
RecipientResolvingReportMessageProcessor (real recipient resolution), and
LoggingReportMessageWriter, wired via BatchPipelineConfig/BatchPipelineProperties.

Message assembly lives in domain.message (pure value types: ReportMessage,
ReportMessageEnvelope, AssemblyContext/ReportContext, Recipient/RecipientType,
PaymentTypeAllocation, ScopedAllocation, TriggerType) and service (the Spring-managed
orchestration: ReportMessageAssembler, its grouping-strategy collaborators, and
ReportMessageIdGenerator), split so domain stays framework-agnostic and Spring-dependent
logic lives in service — matching the ReportConfigTreeAssembler/ReportingPeriodCalculator
precedent from Phase 1.

ReportPipelineTrigger (batch.trigger) resolves a reporting window via
ReportingPeriodCalculator and launches reportPipelineJob through JobOperator — the stable
seam a future Quartz job will call into. Two debug endpoints (ReportMessageDebugController,
BatchJobDebugController) exercise message assembly and the full job run against a live
database, mirroring Phase 1's ReportConfigDebugController.

Fixes two bugs caught by writing real unit tests rather than only integration-testing the
happy path: a compact-constructor NPE in PaymentTypeAllocation's mutual-exclusivity check,
and dangling assignments leaking an empty allocation into bundled messages.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>